--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+# Clarinet
 **/settings/Mainnet.toml
 **/settings/Testnet.toml
 .cache/**
@@ -7,11 +7,45 @@ history.txt
 # Environment variables
 .env
 .env.local
+.env*.local
 
+# Dependencies
+node_modules
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Logs
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Testing & Coverage
 coverage
 *.info
 costs-reports.json
-node_modules
+
+# Build outputs
+dist
+build
+*.js.map
+
+# IDE
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Temporary files
+*.tmp
+*.temp
+.tmp/
