Update project description and telemetry settings in Clarinet.toml

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,21 +1,31 @@
 [project]
 name = "memestack-contracts"
-description = ""
+description = "A memecoin launchpad on Stacks with STX as base token"
 authors = []
-telemetry = true
+telemetry = false
 cache_dir = "./.cache"
+requirements = []
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
+[contracts.memecoin-launchpad]
+path = "contracts/memecoin-launchpad.clar"
+clarity_version = 2
+epoch = 2.5
+
+[contracts.token-factory]
+path = "contracts/token-factory.clar"
+clarity_version = 2
+epoch = 2.5
+
+[contracts.memecoin-token]
+path = "contracts/memecoin-token.clar"
+clarity_version = 2
+epoch = 2.5
 
 [repl.analysis]
 passes = ["check_checker"]
-check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
 
-# Check-checker settings:
-# trusted_sender: if true, inputs are trusted after tx_sender has been checked.
-# trusted_caller: if true, inputs are trusted after contract-caller has been checked.
-# callee_filter: if true, untrusted data may be passed into a private function without a
-# warning, if it gets checked inside. This check will also propagate up to the
-# caller.
-# More informations: https://www.hiro.so/blog/new-safety-checks-in-clarinet
+[repl.analysis.check_checker]
+strict = false
+trusted_sender = false
+trusted_caller = false
+callee_filter = false
