--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -11,6 +11,11 @@ path = "contracts/memecoin-launchpad.clar"
 clarity_version = 2
 epoch = 2.5
 
+[contracts.sip-010-trait]
+path = "contracts/sip-010-trait.clar"
+clarity_version = 2
+epoch = 2.5
+
 [contracts.token-factory]
 path = "contracts/token-factory.clar"
 clarity_version = 2
