--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -11,6 +11,11 @@ path = "contracts/memecoin-launchpad.clar"
 clarity_version = 2
 epoch = 2.5
 
+[contracts.memecoin-launchpad-v2]
+path = "contracts/memecoin-launchpad-v2.clar"
+clarity_version = 2
+epoch = 2.5
+
 [contracts.sip-010-trait]
 path = "contracts/sip-010-trait.clar"
 clarity_version = 2
@@ -21,8 +26,18 @@ path = "contracts/token-factory.clar"
 clarity_version = 2
 epoch = 2.5
 
+[contracts.token-factory-v2]
+path = "contracts/token-factory-v2.clar"
+clarity_version = 2
+epoch = 2.5
+
 [contracts.memecoin-token]
 path = "contracts/memecoin-token.clar"
+clarity_version = 2
+epoch = 2.5
+
+[contracts.memecoin-token-v2]
+path = "contracts/memecoin-token-v2.clar"
 clarity_version = 2
 epoch = 2.5
 
