--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -65,6 +65,11 @@ plan:
             path: contracts/memecoin-launchpad.clar
             clarity-version: 2
         - emulated-contract-publish:
+            contract-name: memecoin-launchpad-v2
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/memecoin-launchpad-v2.clar
+            clarity-version: 2
+        - emulated-contract-publish:
             contract-name: sip-010-trait
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/sip-010-trait.clar
@@ -75,8 +80,18 @@ plan:
             path: contracts/memecoin-token.clar
             clarity-version: 2
         - emulated-contract-publish:
+            contract-name: memecoin-token-v2
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/memecoin-token-v2.clar
+            clarity-version: 2
+        - emulated-contract-publish:
             contract-name: token-factory
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/token-factory.clar
+            clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: token-factory-v2
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/token-factory-v2.clar
             clarity-version: 2
       epoch: "2.5"
