--- a/deployments/default.mainnet-plan.yaml
+++ b/deployments/default.mainnet-plan.yaml
@@ -11,28 +11,28 @@ plan:
         - contract-publish:
             contract-name: memecoin-launchpad-v2
             expected-sender: SP30VGN68PSGVWGNMD0HH2WQMM5T486EK3YGP7Z3Y
-            cost: 156225684
+            cost: 148170
             path: contracts/memecoin-launchpad-v2.clar
             anchor-block-only: true
             clarity-version: 2
         - contract-publish:
             contract-name: sip-010-trait
             expected-sender: SP30VGN68PSGVWGNMD0HH2WQMM5T486EK3YGP7Z3Y
-            cost: 155795646
+            cost: 7410
             path: contracts/sip-010-trait.clar
             anchor-block-only: true
             clarity-version: 2
         - contract-publish:
             contract-name: memecoin-token-v2
             expected-sender: SP30VGN68PSGVWGNMD0HH2WQMM5T486EK3YGP7Z3Y
-            cost: 155866249
+            cost: 30820
             path: contracts/memecoin-token-v2.clar
             anchor-block-only: true
             clarity-version: 2
         - contract-publish:
             contract-name: token-factory-v2
             expected-sender: SP30VGN68PSGVWGNMD0HH2WQMM5T486EK3YGP7Z3Y
-            cost: 78316730
+            cost: 42090
             path: contracts/token-factory-v2.clar
             anchor-block-only: true
             clarity-version: 2
