--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "memestack-contracts-tests",
   "version": "1.0.0",
@@ -8,17 +7,28 @@
   "scripts": {
     "test": "vitest run",
     "test:report": "vitest run -- --coverage --costs",
-    "test:watch": "chokidar \"tests/**/*.ts\" \"contracts/**/*.clar\" -c \"npm run test:report\""
+    "test:watch": "chokidar \"tests/**/*.ts\" \"contracts/**/*.clar\" -c \"npm run test:report\"",
+    "request-refund": "tsx scripts/request-refund.ts",
+    "request-refund-simple": "tsx scripts/request-refund-simple.ts",
+    "request-refund-block-lotto": "tsx scripts/request-refund-block-lotto.ts",
+    "find-contribution": "tsx scripts/find-contribution.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hirosystems/clarinet-sdk": "^3.0.0",
+    "@scure/bip32": "^2.0.1",
+    "@scure/bip39": "^2.0.1",
+    "@stacks/network": "^7.3.1",
     "@stacks/transactions": "^7.0.5",
+    "bip39": "^3.1.0",
     "chokidar-cli": "^3.0.0",
     "typescript": "^5.6.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.0",
     "vitest-environment-clarinet": "^2.3.0"
+  },
+  "devDependencies": {
+    "tsx": "^4.21.0"
   }
 }
